@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Applied PATCH [1060051 ] Add hover effect for week number links
  - Applied PATCH [ 1659949 ] MyCalendar Link not including .php suffix
  - Applied PATCH [ 1669552 ] Themes are not all listed in drop-down
  - Applied PATCH [ 1697119 ] popups.php - fix for IE popups falling of screen.
